# Taxim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  temp.txt
Basics/: Geometry.py  RawData.py  params.py  sensorParams.py
Calibration/: generateDataPack.py  generateShadowMasks.py  generateTensorMap.py  polyTableCalib.py
DataCollection/: gelsight.py  record_Gel.py
MarkerMotionSimulation/: simMarkMotionField.py
MarkerMotionSimulation/compose/: dataLoader.py  superposition.py
OpticalSimulation/: simOptical.py
calibs/: dataPack_small.npz  depth_bg.npy  gelmap5.npy  polycalib.npz  polycalib_small.npz  real_bg_small.npy  shadowTable.npz
calibs/0705_dome_node_dxdz_0.3/: 0705_dome_node_dxdz_0.3_x.txt  0705_dome_node_dxdz_0.3_y.txt  0705_dome_node_dxdz_0.3_z.txt
calibs/0705_dome_node_dz_0.3/: 0705_dome_node_dz_0.3_x.txt  0705_dome_node_dz_0.3_y.txt  0705_dome_node_dz_0.3_z.txt
calibs/digit/: polycalib.npz
calibs/gelsight_r1.5/: polycalib.npz
examples/: batch_render.py  config.py  single_render.py
experiments/: grasp_air_demo.py  grasp_air_video.py  grasp_data_demo.py  grasp_data_video.py  robot.py  utils.py
experiments/setup/: __init__.py
renderer/: DepthRender.py  GelSightLoader.py  ObjectLoader.py  config.py  utils.py
renderer/basics/: sensorParams.py
results/: cylinder6_height.npy  square_height.npy
taxim_robot/: __init__.py  config_digit.yml  config_gelsight.yml  gelsight_render.py  renderer.py  sensor.py
taxim_robot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
taxim_robot/gelsight_data/: polycalib.npz
(+21 files in other folders)
